--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,18 +1,15 @@
 name: dart_holodex_api
-description: A starting point for Dart libraries or applications.
+description: A Dart wrapper for Holodex API v2
 version: 1.0.0
 # homepage: https://www.example.com
 environment:
   sdk: ">=2.14.2 <3.0.0"
 
 dependencies:
-  cookie_jar: ^3.0.1
   equatable: ^2.0.3
   dio: ^4.0.0
-  openapi_generator_annotations: ^3.2.1
   enum_to_string: ^2.0.1
 
 dev_dependencies:
   lints: ^1.0.1
-  openapi_generator: ^3.2.1
   test: ^1.16.0
