--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: dart_holodex_api
 description: A Dart wrapper for Holodex API v2
-version: 1.0.0
-# homepage: https://www.example.com
+version: 0.1.0
+homepage: https://github.com/getBoolean/dart_holodex_api
 environment:
   sdk: ">=2.14.2 <3.0.0"
 
