--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: dart_holodex_api
-description: A Dart wrapper for Holodex API v2
+description: A Dart wrapper for Holodex API v2. Holodex is a website dedicated towards your favorite vtubers, with features like clips management, and music-centric playback.
 version: 0.2.0
 homepage: https://github.com/getBoolean/dart_holodex_api
 environment:
