--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -1,4 +1,4 @@
-name: example_holodex
+name: example
 description: A simple command-line application.
 version: 1.0.0
 publish_to: 'none'
@@ -10,7 +10,7 @@ environment:
 
 dependencies:
   dart_holodex_api:
-    path: '../../'
+    path: '../'
   dotenv: ^3.0.0
 
 dev_dependencies:
