--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,4 +36,7 @@ jobs:
         run: dart analyze --fatal-infos
         
       - name: Run tests
-        run: dart test
+        run: dart test --coverage="coverage"
+        
+      - name: Format Coverage Results
+        run: dart pub global run coverage:format_coverage --lcov --in=coverage --out=coverage.lcov --packages=.packages --report-on=lib
