--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,6 +8,12 @@
             "name": "dart_holodex_api",
             "request": "launch",
             "type": "dart"
+        },
+        {
+            "name": "example",
+            "cwd": "example",
+            "request": "launch",
+            "type": "dart"
         }
     ]
 }
