--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,10 +9,15 @@ environment:
 
 dependencies:
   equatable: ^2.0.3
+  freezed_annotation: ^2.2.0
   http: ^0.13.4
   intl: ^0.17.0
+  json_annotation: ^4.8.0
 
 dev_dependencies:
+  build_runner: ^2.3.3
   dotenv: ^3.0.0
+  freezed: ^2.3.2
+  json_serializable: ^6.6.0
   lints: ^1.0.1
   test: ^1.16.0
