--- a/codecov.yaml
+++ b/codecov.yaml
@@ -18,3 +18,7 @@ comment:
   layout: "reach,diff,flags,files,footer"
   behavior: default
   require_changes: no
+
+ignore:
+  - '**/*.g.dart'
+  - '**/*.freezed.dart'
