--- a/example/analysis_options.yaml
+++ b/example/analysis_options.yaml
@@ -15,13 +15,52 @@ include: package:lints/recommended.yaml
 
 # Uncomment the following section to specify additional rules.
 
-# linter:
-#   rules:
-#     - camel_case_types
+linter:
+  rules:
+    use_super_parameters: true
+    
+    # Single quotes are easier to type and don't compromise on readability.
+    prefer_single_quotes: true
 
-# analyzer:
-#   exclude:
-#     - path/to/excluded/files/**
+    # Type annotations are sometimes necessary for readability
+    omit_local_variable_types: false
+
+    # Better to declare variables as final
+    prefer_final_locals: true
+
+    # Better to leave it up to the programmer
+    prefer_int_literals: false
+
+    # It is better to group related packages
+    sort_pub_dependencies: false
+
+    directives_ordering: true
+
+    unawaited_futures: true
+
+    prefer_relative_imports: false
+    always_use_package_imports: true
+
+    # Some enums might need to have specific letter casing when converted to String
+    constant_identifier_names: false
+
+    unnecessary_lambdas: true
+
+    unnecessary_constructor_name: true
+
+    # Documentation
+    package_api_docs: true
+    # public_member_api_docs: true
+    slash_for_doc_comments: true
+
+    public_member_api_docs: true
+
+analyzer:
+  errors:
+    invalid_annotation_target: ignore
+  exclude:
+    - '**/*.g.dart'
+    - '**/*.freezed.dart'
 
 # For more information about the core and recommended set of lints, see
 # https://dart.dev/go/core-lints
