--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,9 +7,14 @@ name: Build & Test Dart
 
 on:
   push:
-    branches: [main]
-  pull_request:
-    branches: [main]
+    branches:
+      - main
+      - release
+      - release/**
+      - feature/**
+      - fix/**
+      - chore/**
+      - dependabot/**
 
 jobs:
   build:
