Revert "Maybe fix CI"
This reverts commit 7c596b8c93289d7b02defe6ecbd6dc63ccc412b6.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,14 +7,9 @@ name: Build & Test Dart
 
 on:
   push:
-    branches:
-      - main
-      - release
-      - release/**
-      - feature/**
-      - fix/**
-      - chore/**
-      - dependabot/**
+    branches: [main]
+  pull_request:
+    branches: [main]
 
 jobs:
   build:
