--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,5 +18,5 @@ dev_dependencies:
   dotenv: ^4.1.0
   freezed: ^2.3.2
   json_serializable: ^6.6.0
-  lints: ">=2.0.1 <4.0.0"
+  lints: "^3.0.0"
   test: ^1.16.0
